# gliphoread

./: .gitignore  Cargo.toml  Scanned_Document_09_03_2026_1_p01_grid_annot.json
.cargo/: config.toml
scansioni documenti pastry/: Scanned Document N2 SQL File.md
scansioni documenti pastry/pages_png/: Scanned_Document_09_03_2026_1_p01_grid.tsv.tsv
src/: lib.rs  model.rs
