[package]
name = "gliphoread"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7", features = ["native"] }
dioxus-native = "0.7"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"

[profile.release]
lto = true